@@ -1,3 +1,4 @@
+
 TheMightyDude (20 July 2012)
 --------------------------------------
 Fixed Notice:  Use of undefined constant quantity - assumed 'quantity' and energy_available - assumed 'energy_available' in sched_degrade.php
@@ -23,6 +24,7 @@ Fixed Notice:  Use of undefined constant name - assumed 'name' in main.php
 Fixed Notice:  Undefined variable: l_pr_clicktosort, l_sector, l_qty, l_n_a, l_md_toll in defence_report.php
 Fixed loads of errors in check_fighters.php, modify_defences.php, sector_fighters.php, destroy_fighters.php, message_defence_owner.php
 Fixed incorect log date being displayed (display 1 month behind).
+Fixed the correct LOCK TABLES was causing some Invalid SQL logs in file attack.php
 
 TheMightyDude (19 July 2012)
 --------------------------------------
